added multiplexing support by default in ~/.ssh/config template and new untested task to enable PermitRootLogin

--- a/roles/accounts/templates/ssh.config.j2
+++ b/roles/accounts/templates/ssh.config.j2
@@ -6,6 +6,10 @@ Host *
   ForwardX11 no
   ForwardX11Trusted yes
   IdentityFile ~/.ssh/{{ item.name }}_{{ ansible_fqdn }}
+  # enable multiplexing
+  ControlPersist 10m
+  ControlMaster auto
+  ControlPath ~/.ssh/controlmasters/%r@%h:%p
 
 ### personal machines ###
 {% if item.name == 'archf' %}
