back in a one key per user per machine paradigm, unused code has been moved to tmp_code

--- a/roles/accounts/templates/ssh.config.j2
+++ b/roles/accounts/templates/ssh.config.j2
@@ -9,7 +9,7 @@ Host *
   # enable multiplexing
   ControlPersist 10m
   ControlMaster auto
-  ControlPath ~/.ssh/controlmasters/%r@%h:%p
+  # ControlPath ~/.ssh/controlmasters/%r@%h:%p
 
 ### personal machines ###
 {% if item.name == 'archf' %}
