--- a/roles/accounts/templates/inst_dotfiles.j2
+++ b/roles/accounts/templates/inst_dotfiles.j2
@@ -5,3 +5,6 @@ git clone {{ item.dotfiles_ssh }}  {{ item.home | default('/home/' + item.name) 
 
 # generate the symlinks with the install script inside the dotfiles repo
 source ~/dotfiles/install.sh
+
+# install vundle to manage vim plugins
+git clone https://github.com/gmarik/Vundle.vim.git ~/.vim/bundle/Vundle.vim
