workstation packages -> new packages workstation.yml -> new docker role to apply on workstation by default disable controlmaster on github and bitbucket ssh connections accounts -> create the controlmasters directory in .ssh/ dir accounts -> config template in README.md file

--- a/roles/accounts/templates/ssh.config.j2
+++ b/roles/accounts/templates/ssh.config.j2
@@ -40,6 +40,7 @@ Host bitbucket.org
   ForwardAgent no
   ForwardX11 no
   PreferredAuthentications publickey
+  ControlMaster no
 
 Host github.com
   Hostname github.com
@@ -47,6 +48,7 @@ Host github.com
   ForwardAgent no
   ForwardX11 no
   PreferredAuthentications publickey
+  ControlMaster no
 {% endif %}
 
 # local vm
